--- a/configs/language/en.json
+++ b/configs/language/en.json
@@ -5,24 +5,28 @@
     "costamount":"Free",
     "afternoon":"Evening",
     "morning":"Morning",
-    "tunnel":"Tunnels",
-    "monument":"Monument",
-    "museum":"Museum",
-    "home":"Home",
+    "tunnel":"Underground Tunnels",
+    "monument":"Monument to Fallen",
+    "museum":"War Museum",
+    "home":"Homepage",
     "contact":"Contact",
     "number":"Contact Number",
     "email":"Email",
-    "welcome":"The 10th Infantry Regiment welcomes you to the application of the heroic Fort Roupel",
-    "info":"Get to know the construction Miracle of the Greek fortification that was achieved in the period 1936-1941 and the heroic resistance of the fortress in April 1941.",
+    "welcome":"Welcome to the online application with useful information about the heroic Rupel Fort",
+    "info":"Get to know the construction miracle of the Greek fortification that was achieved in the period 1936-1941 and the heroic resistance of the fortress in April 1941.",
     "services":"Services",
     "canteen":"Canteen",
     "parking":"Parking",
     "tunnelintro":"Discover the underground tunnels of Fort Roupel",
-    "entrance":"Below we can see the entrace of the Command Station of Roupel, the only visitable tunnel of Roupel",
+    "entrance":"The image of the era depicts the entrance to the Roupel Command Station, which is part of the visitable part of the fort.",
     "museumintro":"Discover the war museum of Fort Roupel",
     "museumentrance":"Below we see the exhibit room with objects of the World War II era of the museum",
     "monumentintro":"We are at the hill of Command Station of Roupel",
     "monumenthill":"Τhe monument of the fallen was built in the 60s and 70s",
-    "map":"Map"
-
+    "map":"Map",
+    "entrancetoday":"The entrance of the Command Company as we see it today",
+    "tunnelstart":"The underground tunnel of the Command Station with lampposts on the right and left for lighting and the red metal line on the right for orientation in the tunnels. As long as the red line is on the right, it leads deeper into the tunnel, while on the left, it leads to an entrance/exit.",
+    "tunnelinforooms":"The underground tunnels have all the necessary facilities for functioning as an underground camp such as offices, storerooms, soldiers' quarters, kitchens, baths and latrines and telephone centers.",
+    "tunnelprotection":"Inside the tunnel there is a guard to protect the entrance and through the underground tunnel there are stairs for access to the surface fortifications.",
+    "tunnelspecs":"The fort consists of 6 fort complexes. On the hill of Prophet Ilias is the central complex, the Command Station. The total length of Rupel's underground tunnels is 6,100 meters with 4,251 meters of communication galleries and 1,849 meters of underground shelter development. The intended strength of the fort was 1,353 soldiers and 44 officers."
 }
