--- a/configs/language/gr.json
+++ b/configs/language/gr.json
@@ -5,24 +5,28 @@
     "costamount":"Δωρεάν",
     "afternoon":"Απόγευμα",
     "morning":"Πρωί",
-    "tunnel":"Στοές",
-    "monument":"Μνημείo",
-    "museum":"Μουσείο",
-    "home":"Αρχική",
+    "tunnel":"Υπόγειες Στοές",
+    "monument":"Μνημείo των Πεσόντων",
+    "museum":"Πολεμικό Μουσείο",
+    "home":"Αρχική Σελίδα",
     "contact":"Επικοινωνία",
     "number":"Τηλέφωνο Επικοινωνίας",
     "email":"Email",
-    "welcome":"Το 10ο Σύνταγμα Πεζικού σας καλωσορίζει στην εφαρμογή του ηρωικού Οχυρού Ρούπελ",
-    "info":"Γνωρίστε το κατασκευαστικό Θαύμα της ελληνικής οχύρωσης που επιτεύχθηκε την περίοδο 1936-1941 και την ηρωική αντίσταση του οχυρού τον Απρίλιο του 1941.",
+    "welcome":"Καλώς ήρθατε στην ηλεκτρονική εφαρμογή με χρήσιμες πληροφορίες για το ηρωικό Οχυρό Ρούπελ",
+    "info":"Γνωρίστε το κατασκευαστικό θαύμα της Ελληνικής οχύρωσης που επιτεύχθηκε την περίοδο 1936-1941 και την αντίσταση του οχυρού τον Απρίλιο του 1941.",
     "services":"Παροχές",
     "canteen":"Κυλικείο",
     "parking":"Πάρκινγκ",
-    "tunnelintro":"Ανακαλύψτε τις υπογείες στοές του Οχυρού Ρούπελ",
-    "entrance":"Παρακάτω βλέπουμε την είσοδο του Σταθμού Διοικήσεως του Ρούπελ, της μόνης επισκέψιμης στοάς του Ρούπελ",
+    "tunnelintro":"Υπογείες στοές του Οχυρού Ρούπελ",
+    "entrance":"Η εικόνα της εποχής απεικονίζει την είσοδο του Σταθμού Διοικήσεως του Ρούπελ, η οποία αποτελεί κομμάτι του επισκέψιμου τμήματος του οχυρού.",
     "museumintro":"Ανακαλύψτε το πολεμικό μουσείο του Οχυρού Ρούπελ",
     "museumentrance":"Παρακάτω βλέπουμε την αίθουσα εκθεμάτων με αντικέιμενα της εποχής του Β' Παγκοσμίου Πολέμου του μουσείου",
     "monumentintro":"Βρισκόμαστε στο λόφο του Σταθμού Διοικήσεως του Ρούπελ",
     "monumenthill":"Το μνημείο των πεσόντων κατασκευάστηκε την δεκαετία του 60 και 70",
-    "map":"Χάρτης"
-    
+    "map":"Χάρτης",
+    "entrancetoday":"Η είσοδος του Σταθμού Διοικήσεως, όπως τη βλέπουμε σήμερα.",
+    "tunnelstart":"Η υπόγεια στοά του Σταθμού Διοικήσεως με φανοστάτες δεξιά και αριστερά για φωτισμό, καθώς και η χαρακτηριστική κόκκινη μεταλλική γραμμή για τον προσανατολισμό εντός της στοάς. Όσο η κόκκινη γραμμή βρίσκεται στα δεξιά (τόνος) οδηγεί στο εσωτερικό της στοάς, ενώ όσο είναι στα αριστερά οδηγεί σε είσοδο/έξοδο. Οι υπόγειες στοές είχαν όλες τις απαραίτητες και αναγκαίες εγκαταστάσεις για την ασφαλή διαβίωση του προσωπικού, όπως γραφεία, αποθήκες, θαλάμους οπλιτών, μαγειρεία, λουτρά και αφοδευτήρια, καθώς και τηλεφωνικά κέντρα επικοινωνιών.",
+    "tunnelinforooms":"Οι υπόγειες στοές έχουν όλες τις απαραίτητες εγκαταστάσεις για την λειτουργεία ως υπόγειο στρατόπεδο όπως γραφεία, αποθήκες, θαλάμους οπλιτών, μαγειρεία, λουτρά και αφοδευτερήρια και τηλεφωνικά κέντρα.",
+    "tunnelprotection":"Στο εσωτερικό υπάρχουν θέσεις μάχης/κάλυψης για αγώνα εντός των στοών, καθώς και σκάλες για πρόσβαση στα επιφανειακά έργα άμυνας.",
+    "tunnelspecs":"Το οχυρό αποτελείται από 6 οχυρά συγκροτήματα. Στο ύψωμα Προφήτης Ηλίας βρίσκεται το κεντρικό συγκρότημα, ο Σταθμός Διοικήσεως. Το συνολικό μήκος των υπόγειων στοών του Ρούπελ είναι 6.100 μέτρα με 4.251 μέτρα μήκος στοών επικοινωνίας και 1.849 μέτρα ανάπτυγμα υπόγειων καταφυγίων. Η προβλεπόμενη δύναμη του οχυρού ήταν 1.353 οπλίτες και 44 αξιωματικοί."
 }
