--- a/configs/language/en.json
+++ b/configs/language/en.json
@@ -3,8 +3,8 @@
     "opentime":"Visiting Hours",
     "cost":"Entrance Fee",
     "costamount":"Free",
-    "afternoon":"Evening",
-    "morning":"Morning",
+    "afternoon":"Summer Period",
+    "morning":"Winter Period",
     "tunnel":"Underground Tunnels",
     "monument":"Monument to Fallen",
     "museum":"War Museum",
@@ -15,18 +15,28 @@
     "welcome":"Welcome to the online application with useful information about the heroic Rupel Fort",
     "info":"Get to know the construction miracle of the Greek fortification that was achieved in the period 1936-1941 and the heroic resistance of the fortress in April 1941.",
     "services":"Services",
-    "canteen":"Canteen",
-    "parking":"Parking",
+    "canteen":"Cafeteria, souvenirs",
+    "parking":"free parking",
     "tunnelintro":"Discover the underground tunnels of Fort Roupel",
     "entrance":"The image of the era depicts the entrance to the Roupel Command Station, which is part of the visitable part of the fort.",
     "museumintro":"Discover the war museum of Fort Roupel",
-    "museumentrance":"Below we see the exhibit room with objects of the World War II era of the museum",
+    "museumentrance":"TThe exhibition hall includes artefacts, weaponry and military uniforms of the period, as well as finds from the tunnels and the surrounding areas",
     "monumentintro":"We are at the hill of Command Station of Roupel",
-    "monumenthill":"Τhe monument of the fallen was built in the 60s and 70s",
+    "monumenthill":"At the top of Profitis Ilias hill, under which is the today's visitable arcade that used to house the Command Station, is placed an imposing structure, dedicated to the memory of the dead. On the Heroon are recorded the names of the 123 fallen of the Rupel, Karatas, Paliouriones Forts, as well as Loutron and Kapina hill.",
     "map":"Map",
     "entrancetoday":"The entrance of the Command Company as we see it today",
     "tunnelstart":"The underground tunnel of the Command Station with lampposts on the right and left for lighting and the red metal line on the right for orientation in the tunnels. As long as the red line is on the right, it leads deeper into the tunnel, while on the left, it leads to an entrance/exit.",
     "tunnelinforooms":"The underground tunnels have all the necessary facilities for functioning as an underground camp such as offices, storerooms, soldiers' quarters, kitchens, baths and latrines and telephone centers.",
     "tunnelprotection":"Inside the tunnel there is a guard to protect the entrance and through the underground tunnel there are stairs for access to the surface fortifications.",
-    "tunnelspecs":"The fort consists of 6 fort complexes. On the hill of Prophet Ilias is the central complex, the Command Station. The total length of Rupel's underground tunnels is 6,100 meters with 4,251 meters of communication galleries and 1,849 meters of underground shelter development. The intended strength of the fort was 1,353 soldiers and 44 officers."
+    "tunnelspecs":"The fort consists of 6 fort complexes. On the hill of Prophet Ilias is the central complex, the Command Station. The total length of Rupel's underground tunnels is 6,100 meters with 1,849 meters of development. The strength of the fort was 27 officers (intended strength 44) and 950 enlisted men (intended strength 1,353).",
+    "sword":"In the top photo we can see the Commander of Roupel, Major Douratsos Georgios, and his service details, while in the bottom photo we see the sword, medals and memorials of the Commander of the Molon Lave Company, Lieutenant Zachariadis Fotios.",
+    "museumekso":"Rupel's war museum as seen from the outside with two cannons adorning the entrance",
+    "museumflag":"At the entrance to the museum we see a replica of Rupel's war flag and a plaque with the names of the Engineer officers who participated in Rupel's fortifications. We still see a top view of the fort.",
+    "playmobil":"There is also a Playmobil battle dummy in the museum.",
+    "monumentgun":"On the outskirts of the hill, the 6-finger cannon of the Artillery of Captain Kyriakidis Alexandros, damaged by an attack by German aircraft, is exhibited.",
+    "monumenttunnel":"Below the Prophet Ilias hill is the today's visitable arcade that used to house the Command Station. The route that is part of the tour is outlined in red.",
+    "monumentboth":"In the image below, we can see the memorial in relation to the entrance to the tunnels",
+    "sound":"In the museum there is also a room for viewing audio-visual material with a narration of important elements of the construction, but also of the battle of the Forts.",
+    "museumtomi":"In the central hall of the museum is the impressive sectional diorama of the tunnels of the Fort Roupel to scale.",
+    "and":"and"
 }
