--- a/configs/language/gr.json
+++ b/configs/language/gr.json
@@ -3,8 +3,8 @@
     "opentime":"Ώρες Λειτουργίας",
     "cost":"Παράβολο Εισόδου",
     "costamount":"Δωρεάν",
-    "afternoon":"Απόγευμα",
-    "morning":"Πρωί",
+    "afternoon":"Θερινή Περίοδος",
+    "morning":"Χειμερινή Περίοδος",
     "tunnel":"Υπόγειες Στοές",
     "monument":"Μνημείo των Πεσόντων",
     "museum":"Πολεμικό Μουσείο",
@@ -15,18 +15,28 @@
     "welcome":"Καλώς ήρθατε στην ηλεκτρονική εφαρμογή με χρήσιμες πληροφορίες για το ηρωικό Οχυρό Ρούπελ",
     "info":"Γνωρίστε το κατασκευαστικό θαύμα της Ελληνικής οχύρωσης που επιτεύχθηκε την περίοδο 1936-1941 και την αντίσταση του οχυρού τον Απρίλιο του 1941.",
     "services":"Παροχές",
-    "canteen":"Κυλικείο",
-    "parking":"Πάρκινγκ",
+    "canteen":"Κυλικείο, πώληση αναμνηστικών",
+    "parking":"δωρεάν στάθμευση",
     "tunnelintro":"Υπογείες στοές του Οχυρού Ρούπελ",
     "entrance":"Η εικόνα της εποχής απεικονίζει την είσοδο του Σταθμού Διοικήσεως του Ρούπελ, η οποία αποτελεί κομμάτι του επισκέψιμου τμήματος του οχυρού.",
     "museumintro":"Ανακαλύψτε το πολεμικό μουσείο του Οχυρού Ρούπελ",
-    "museumentrance":"Παρακάτω βλέπουμε την αίθουσα εκθεμάτων με αντικέιμενα της εποχής του Β' Παγκοσμίου Πολέμου του μουσείου",
+    "museumentrance":"Η αίθουσα εκθεμάτων περιλαμβάνει αντικείμενα, οπλισμό και στρατιωτικές στολές της περιόδου, καθώς και ευρήματα των στοών και της γύρω περιοχής",
     "monumentintro":"Βρισκόμαστε στο λόφο του Σταθμού Διοικήσεως του Ρούπελ",
-    "monumenthill":"Το μνημείο των πεσόντων κατασκευάστηκε την δεκαετία του 60 και 70",
+    "monumenthill":"Στην κορυφή του λόφου «Προφήτης Ηλίας», είναι τοποθετημένη μία επιβλητική κατασκευή, αφιερωμένη στη μνήμη των νεκρών. Στο Ηρώο καταγράφονται τα ονόματα των 123 πεσόντων των Οχυρών Ρούπελ, Καρατάς, Παλιουριώνες, καθώς και των Λόφου Λουτρών και Καπίνας.",
     "map":"Χάρτης",
     "entrancetoday":"Η είσοδος του Σταθμού Διοικήσεως, όπως τη βλέπουμε σήμερα.",
-    "tunnelstart":"Η υπόγεια στοά του Σταθμού Διοικήσεως με φανοστάτες δεξιά και αριστερά για φωτισμό, καθώς και η χαρακτηριστική κόκκινη μεταλλική γραμμή για τον προσανατολισμό εντός της στοάς. Όσο η κόκκινη γραμμή βρίσκεται στα δεξιά (τόνος) οδηγεί στο εσωτερικό της στοάς, ενώ όσο είναι στα αριστερά οδηγεί σε είσοδο/έξοδο. Οι υπόγειες στοές είχαν όλες τις απαραίτητες και αναγκαίες εγκαταστάσεις για την ασφαλή διαβίωση του προσωπικού, όπως γραφεία, αποθήκες, θαλάμους οπλιτών, μαγειρεία, λουτρά και αφοδευτήρια, καθώς και τηλεφωνικά κέντρα επικοινωνιών.",
+    "tunnelstart":"Η υπόγεια στοά του Σταθμού Διοικήσεως με φανοστάτες δεξιά και αριστερά για φωτισμό, καθώς και η χαρακτηριστική κόκκινη μεταλλική γραμμή για τον προσανατολισμό εντός της στοάς. Όσο η κόκκινη γραμμή βρίσκεται στα δεξιά οδηγεί στο εσωτερικό της στοάς, ενώ όσο είναι στα αριστερά οδηγεί σε είσοδο/έξοδο. Οι υπόγειες στοές είχαν όλες τις απαραίτητες και αναγκαίες εγκαταστάσεις για την ασφαλή διαβίωση του προσωπικού, όπως γραφεία, αποθήκες, θαλάμους οπλιτών, μαγειρεία, λουτρά και αφοδευτήρια, καθώς και τηλεφωνικά κέντρα επικοινωνιών.",
     "tunnelinforooms":"Οι υπόγειες στοές έχουν όλες τις απαραίτητες εγκαταστάσεις για την λειτουργεία ως υπόγειο στρατόπεδο όπως γραφεία, αποθήκες, θαλάμους οπλιτών, μαγειρεία, λουτρά και αφοδευτερήρια και τηλεφωνικά κέντρα.",
     "tunnelprotection":"Στο εσωτερικό υπάρχουν θέσεις μάχης/κάλυψης για αγώνα εντός των στοών, καθώς και σκάλες για πρόσβαση στα επιφανειακά έργα άμυνας.",
-    "tunnelspecs":"Το οχυρό αποτελείται από 6 οχυρά συγκροτήματα. Στο ύψωμα Προφήτης Ηλίας βρίσκεται το κεντρικό συγκρότημα, ο Σταθμός Διοικήσεως. Το συνολικό μήκος των υπόγειων στοών του Ρούπελ είναι 6.100 μέτρα με 4.251 μέτρα μήκος στοών επικοινωνίας και 1.849 μέτρα ανάπτυγμα υπόγειων καταφυγίων. Η προβλεπόμενη δύναμη του οχυρού ήταν 1.353 οπλίτες και 44 αξιωματικοί."
+    "tunnelspecs":"Το οχυρό Ρούπελ αποτελείται από έξι συγκροτήματα. Στο ύψωμα Προφήτης Ηλίας βρίσκεται το κεντρικό συγκρότημα, ο Σταθμός Διοικήσεως. Το συνολικό μήκος των υπόγειων στοών του Ρούπελ είναι 6.100 μέτρα με 1.849 μέτρα ανάπτυγμα. Η δύναμη του οχυρού ήταν 27 αξιωματικοί (προβλεπόμενη δύναμη 44) και 950 οπλίτες (προβλεπόμενη δύναμη 1.353).",
+    "sword":"Στην πάνω φωτογραφία διακρίνεται ο Διοικητής του Ρούπελ, Ταγματάρχης Δουράτσος Γεώργιος, και τα στοιχεία υπηρεσίας του, ενώ στην κάτω φωτογραφία βλέπουμε το ξίφος, τα μετάλλια και τις διαμνημονεύσεις του Διοικητή του Λόχου Μολών Λαβέ, Υπολοχαγού Ζαχαριάδη Φώτιου.",
+    "museumekso":"Το πολεμικό μουσείο του Ρούπελ όπως φαίνεται εξωτερικά με δύο πυροβόλα να στολίζουν την είσοδο",
+    "playmobil":"Στο μουσείο εκτίθεται επίσης και ένα διόραμα, το οποίο απεικονίζει τη μάχη των Οχυρών με φιγούρες Playmobil.",
+    "museumflag":"Στην είσοδο του μουσείου βλέπουμε ομοίωμα της πολεμικής σημαίας του Ρούπελ και μία πινακίδα όπου αναγράφονται τα ονόματα των αξιωματικών του Μηχανικού, οι οποίοι συμμετείχαν στα έργα οχυρώσεως του Ρούπελ. Ακόμα βλέπουμε μια κάτοψη του οχυρού.",
+    "monumentgun":"Στις παρυφές του λόφου εκτίθεται το κατεστραμμένο από επίθεση Γερμανικών αεροσκαφών πυροβόλο 6 δαχτύλων της Πυροβολαρχίας του Λοχαγού Κυριακίδη Αλέξανδρου.",
+    "monumenttunnel":"Κάτω από το λόφο βρίσκεται η σημερινή επισκέψιμη στοά, που στέγαζε το Σταθμό Διοικήσεως. Η κόκκινη γραμμή σκιαγραφεί τη διαδρομή της ξενάγησης εντός της στοάς.",
+    "monumentboth":"Στην παρακάτω εικόνα διακρίνουμε το μνήμειο σε σχέση με την είσοδο των στοών",
+    "sound":"Στο μουσείο υπάρχει επίσης αίθουσα προβολής οπτικοακουστικού υλικού με εξιστόρηση σημαντικών στοιχείων της κατασκευής, αλλά και της μάχης των Οχυρών.",
+    "museumtomi":"Στην κεντρική αίθουσα του μουσείου δεσπόζει ένα εντυπωσιακό διόραμα, το οποίο απεικονίζει μία ενδεικτική τομή σε κλίμακα ενός οχυρού.",
+    "and":"και"
 }
